--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,4 +1,4 @@
 inv.params.x=aaa
 inv.params.y=bbb
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:customer-db
+spring.datasource.url=jdbc:h2:mem:inventory-db
