--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,2 +1,4 @@
 customer.params.x=1
 customer.params.y=23
+management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:customer-db
